--- a/ios/weather/Info.plist
+++ b/ios/weather/Info.plist
@@ -38,13 +38,30 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>Your location is required for get weatherdata for you</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Weather app needs to get your location to get weatherData for you</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
 	</array>
+  <key>UIAppFonts</key>
+  <array>
+    <string>Roboto-Black.ttf</string>
+    <string>Roboto-BlackItalic.ttf</string>
+    <string>Roboto-Bold.ttf</string>
+    <string>Roboto-BoldItalic.ttf</string>
+    <string>Roboto-Italic.ttf</string>
+    <string>Roboto-Light.ttf</string>
+    <string>Roboto-LightItalic.ttf</string>
+    <string>Roboto-Medium.ttf</string>
+    <string>Roboto-MediumItalic.ttf</string>
+    <string>Roboto-Regular.ttf</string>
+    <string>Roboto-Thin.ttf</string>
+    <string>Roboto-ThinItalic.ttf</string>
+  </array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
