--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@react-navigation/stack": "^5.14.5",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-flash-message": "^0.1.23",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-get-location": "^2.1.1",
+    "react-native-maps": "^0.28.0",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
